--- a/3일차/hw04.html
+++ b/3일차/hw04.html
@@ -21,7 +21,7 @@
         //선택과목 수와 선택과목명을 div에 출력(다중선택이 가능함)
         //코드 입력하세요...
         let option = document.querySelectorAll("#subject option:checked");
-        
+        // 어렵다
         if(option.length === 0){
           alert("선택 x");
           return;
