--- a/4일차/add_remove.html
+++ b/4일차/add_remove.html
@@ -12,20 +12,14 @@
   <h3>노드 추가 삭제</h3>
   <button class="btnadd">+</button>
   <div class="temp">
-    <input id="school">
-    <input id="dt">
-    <button class="btn">-</button>
+    <input id="school"><input id="dt"><button class="btn">-</button>
   </div>
   <div id="result"></div>
   <script>
     let btnadd = document.getElementsByClassName("btnadd")[0]
     btnadd.onclick = function () {
-      /* result.innerHTML += 
-      `<div class="temp">
-      <input id="school">
-      <input id="dt">
-      <button class="btn">-</button>
-      </div>` */
+      // result.innerHTML += 
+      // `<div class="temp"><input id="school"><input id="dt"><button class="btn">-</button></div>`
       let div = document.createElement("div");
       let input = document.createElement("input");
       let input1 = document.createElement("input");
@@ -39,7 +33,11 @@
       div.appendChild(input);
       div.appendChild(input1);
       div.appendChild(button);
+      
       // innerText
+      button.innerHTML = "-";
+
+      result.append(div);
 
     }
     
