--- a/4일차/option_move.html
+++ b/4일차/option_move.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>option_move</title>
 </head>
 <body>
   <select size="10" id="left">
@@ -16,14 +16,18 @@
   <select size="10" id="right"></select>
   <script>
     left.ondblclick = function(ev){
-      let option = ev.target;
-     // console.log(option.innerText) // 선택한 option 
+      // let option = ev.target;
+      // right.append(option);
+      //console.log(option.innerText) // 선택한 option 
       // 태그생성해서 right append  , innerHTML, append
-      //let a = left.removeChild(ev.target);
-      //ev.target.remove()
-      // let op = document.createElement("option");
-      right.append(option);
-      //ev.target.remove()
+      let op = document.createElement("option");
+      op.innerHTML = ev.target.innerHTML;
+      left.removeChild(ev.target);
+      right.append(op);
+    }
+    right.ondblclick = function(ev){
+      let option = ev.target;
+      left.append(option);
     }
 
   </script>
