--- a/3일차/dom.html
+++ b/3일차/dom.html
@@ -13,7 +13,7 @@
     <li class="item">test</li>
   </ul>
   <script>
-    /* addBtn.onclick = function(){
+    addBtn.onclick = function(){
       // 태그 생성
       let li = document.createElement("li"); // <li>
       // 태그에 속성을 지정
@@ -24,7 +24,7 @@
       
       // 부모태그에 연결
       itemList.appendChild(li);
-    } */
+    }
 
     addBtn.onclick = function(){
       itemList.innerHTML += `<li class="item">${txt.value}</li>`;
