--- a/4일차/selector.html
+++ b/4일차/selector.html
@@ -98,7 +98,7 @@
   <span class="markup">&lt;/table&gt;</span>
   </div>
   
-  <div class="noSel newsletter" style="background-color:#99D6FF;border:1px solid #0099FF;padding:10px;xfont-size:12px;">
+  <div class="noSel newsletter" style="background-color:#99D6FF;border:1px solid #0099FF;padding:10px;font-size:12px;">
   <form>
    <h4>Subscribe to my newsletter:</h4>
    <div style="overflow:auto;">
