--- a/5일차/eventmouse.html
+++ b/5일차/eventmouse.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,11 +10,15 @@
     img {
       width: 100px;
       position: relative;
-      left : 200px;
+      left: 200px;
     }
   </style>
+  <script src="eventmouse.js"></script>
 </head>
+
 <body>
   <img src="/3일차/img/강아지1.jpg">
+
 </body>
+
 </html>
