--- a/5일차/eventGroup.html
+++ b/5일차/eventGroup.html
@@ -38,7 +38,7 @@
     });
     // 이벤트위임(그룹이벤트) : 부모태그에 이벤트를 지정
     basket.addEventListener("click", function(ev){
-      let node = ev.target; // 실제로 이벤트가 발생한 대상(태그)
+      let node = ev.target; // 실제로 이벤트가 발생한 대상(태그=타겟)
       if (node.classList.contains("fruit")) {  // div 이면 본인을 삭제
         node.remove();
       } else if(node.nodeName == "SPAN") {   // span 태그이면 부모를 삭제
