--- a/5일차/eventGroup.html
+++ b/5일차/eventGroup.html
@@ -23,7 +23,8 @@
 
   <div id="basket"></div>
   <div id="template" style="display: none;">
-    <div class="fruit" title="사과"><span>사과</span></div>
+    <div class="fruit" title="사과">
+      <span>사과</span></div>
   </div>
   <script>
 
@@ -32,17 +33,18 @@
         return;
       }
       let content = ev.target.innerText;
-      let div = `<div class="fruit" title="${content}"><span>${content}</span></div>`
+      let div = `<div class="fruit" title="${content}"><span>${content}<button>삭제</button></span></div>`
       basket.innerHTML += div;
       // basket.append(div);
     });
     // 이벤트위임(그룹이벤트) : 부모태그에 이벤트를 지정
     basket.addEventListener("click", function(ev){
       let node = ev.target; // 실제로 이벤트가 발생한 대상(태그=타겟)
-      if (node.classList.contains("fruit")) {  // div 이면 본인을 삭제
-        node.remove();
-      } else if(node.nodeName == "SPAN") {   // span 태그이면 부모를 삭제
-        node.parentNode.remove()
+      // if (node.classList.contains("fruit")) {  // div 이면 본인을 삭제
+      //   node.remove();
+      // } 
+      if(node.nodeName == "BUTTON") {   // span 태그이면 부모를 삭제
+        node.closest("div").remove()  // closest() 부모들 중에서 가장 가까운 태그 찾음
       }
     });
 
