--- a/3일차/random.html
+++ b/3일차/random.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>random.html</title>
-</head>
-<body>
-  <img src="./img/강아지1.jpg" id="img">
-  <script>
-    let imgArr = new Array();
-    imgArr.push("./img/강아지1.jpg");
-    imgArr.push("./img/강아지2.jpg");
-    imgArr.push("./img/포메.jpg");
-    imgArr.push("./img/말티즈.jpg");
-    imgArr.push("./img/골든.jpg");
-    
-    let num = Math.floor(Math.random() * imgArr.length);  // 0 ~ 0.99999  *10 -> 0 ~ 9.99999 +1
-    img.src = imgArr[num];
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>random.html</title>
+  </head>
+  <body>
+    <img src="./img/강아지1.jpg" id="img" />
+    <script>
+      let imgArr = new Array();
+      imgArr.push("./img/강아지1.jpg");
+      imgArr.push("./img/강아지2.jpg");
+      imgArr.push("./img/포메.jpg");
+      imgArr.push("./img/말티즈.jpg");
+      imgArr.push("./img/골든.jpg");
+
+      let num = Math.floor(Math.random() * imgArr.length); // 0 ~ 0.99999  *10 -> 0 ~ 9.99999 +1
+      img.src = imgArr[num];
+    </script>
+  </body>
 </html>
