--- a/array_sort.html
+++ b/array_sort.html
@@ -29,8 +29,8 @@
       //     arr2.push(arr[i]);
       //   }
       // }
-      // arr.filter((emp) => arr.age > 20);
-      arr2 = arr.filter((emp) => arr.name == "kim");
+      // arr2 = arr.filter((emp) => emp.age > 20);
+      arr2 = arr.filter((emp) => emp.name == "kim");
       console.table(arr2);
     </script>
   </body>
