--- a/comments_fetch.html
+++ b/comments_fetch.html
@@ -24,43 +24,39 @@
       function deletecomment(ev) {
         let id = ev.target.getAttribute("data-id");
         let url = "http://localhost:3000/comments/" + id;
-        let xhr = new XMLHttpRequest();
-        xhr.onload = function () {
+        fetch(url, {
+          method: "delete",
+        }).then((res) => {
           selectcomment();
-        };
-        xhr.open("delete", url);
-        //xhr.setRequestHeader("Content-Type", "application/json");
-        xhr.send();
+        });
       }
 
       //post 등록 - post 방식, json 형식 파라미터
       function insertcomment() {
         let url = "http://localhost:3000/comments";
-        let xhr = new XMLHttpRequest();
-        xhr.onload = function () {
-          selectcomment();
-        };
-        xhr.open("post", url);
-        xhr.setRequestHeader("Content-Type", "application/json");
         let data = { id: id.value, body: body.value };
-        xhr.send(JSON.stringify(data));
+        fetch(url, {
+          method: "post",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data),
+        })
+          .then((res) => res.json())
+          .then((res) => {
+            selectcomment();
+          });
       }
+
       //post 전체조회 -get
       function selectcomment() {
         let url = "http://localhost:3000/comments";
-        let xhr = new XMLHttpRequest();
-        xhr.onload = function () {
-          commentslist.innerHTML = "";
-          console.log("요청완료");
-          const comment = JSON.parse(xhr.responseText);
-          for (let i = 0; i < comment.length; i++) {
-            commentslist.innerHTML += `<div>${comment[i].id} ${comment[i].body}<button data-id="${comment[i].id}">삭제</button></div>`;
-          }
-          console.log(xhr.responseText);
-        };
-        xhr.open("get", url); //false하면 동기됨
-        xhr.send(); // 비동기
-        console.log("요청시작");
+        fetch(url)
+          .then((res) => res.json())
+          .then((comment) => {
+            commentslist.innerHTML = "";
+            for (let i = 0; i < comment.length; i++) {
+              commentslist.innerHTML += `<div>${comment[i].id} ${comment[i].body}<button data-id="${comment[i].id}">삭제</button></div>`;
+            }
+          });
       }
     </script>
   </body>
